# romaingrx.com

./: .cursorrules  .eslintrc.cjs  .gitignore  .lintstagedrc.js  .mcp.json  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  README.md  TODO.md  astro.config.mjs  bun.lockb  contentlayer.config.ts  eslint.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
.claude/commands/: thread.md
.cursor/rules/: general.mdc
.github/workflows/: bundle-size.yml  ci.yml
app/: ServerStyleSheet.tsx  icon.tsx  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/design/: page.tsx
app/gradient/: page.tsx
app/projects/: page.tsx
app/test/: page.tsx
components/: Analytics.tsx  Background.tsx  GameOfLife.jsx  layout.tsx
components/Button/: Button.styles.tsx  Button.tsx  Button.types.ts
components/Link/: Link.styles.tsx  Link.tsx  Link.types.ts  index.ts
components/about/: Timeline.tsx
components/backgrounds/: Background.tsx  GameOfLife.jsx  LiquidGradient.tsx  PixelBackground.tsx  SmoothGradient.tsx
content/blog/20260302-ddpm/code/: .gitignore  README.md  pyproject.toml
content/blog/20260302-ddpm/code/ddpm/: checkpoint.py  cli.py  collect.py  config.py  data.py  fonts.py  model.py  sample.py  schedule.py  schema.py  sdf.py  train.py  types.py
content/blog/20260302-ddpm/code/tests/: conftest.py  test_jaxtyping.py  test_schedule.py  test_train.py
design/: index.ts  stitches.config.ts  styles.ts
hooks/: localStorage.ts  tailwind.ts
lib/: articles.ts  fonts.ts  game_of_life.js  notion.ts  theme.tsx  utils.ts
models/: notion.ts
public/: _redirects
scripts/: bundle-report.sh  generate-favicon.mjs
src/: content.config.ts  env.d.ts  sentry.client.config.ts  sentry.server.config.ts
src/content/blog/20260301-vae/code/: pyproject.toml
src/content/blog/20260301-vae/code/vae/: data.py
styles/: globals.css  mdx.css
(+474 files in other folders)
